forgot the # in the within blocks

--- a/app/views/hospitals/show.html.erb
+++ b/app/views/hospitals/show.html.erb
@@ -2,8 +2,8 @@
 <h2>Doctors</h2>
 <ol>
     <% @doctors.each do |doctor| %>
-        <li>
-            <p>Doctor <%= doctor.name %> has <%= doctor.patients.count %> patients</p></div>
+        <li id="<%= doctor.id %>">
+            <p>Doctor <%= doctor.name %> has <%= doctor.patients.count %> patients</p>
         </li>
     <% end %>
 </ol>
